--- a/css/styles2.css
+++ b/css/styles2.css
@@ -8,6 +8,7 @@
 body {
   font-family: 'Public Sans', sans-serif;
   font-size: 1.125rem;
+  overflow-x: hidden;
 }
 img {
   display: block;
@@ -24,17 +25,22 @@ a {
 
 .header {
   min-height: 5rem;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   background: hsl(0, 0%, 100%);
+  display: grid;
+  gap: 1.25rem;
+  grid-template-columns: repeat(12, 1fr);
+  position: relative;
+  z-index: 100;
 }
 
 .container {
-  max-width: 1100px;
-  margin: 0 auto;
+  grid-column: 2 / 12;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid red;
+  padding: 0 1.5rem;
 }
 
 .menu-list {
@@ -97,21 +103,40 @@ a {
 }
 
 .hero {
-  border: 1px solid red;
-  background: url('../images/bg-intro-desktop.svg') no-repeat top right;
-
-  max-height: 30rem;
-}
-
-.hero-container {
-  border: 1px solid blue;
-  max-width: 1100px;
-  margin: 0 auto;
-  display: flex;
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 40rem;
   align-items: center;
+  gap: 1.25rem;
+  background-color: hsl(0, 0%, 98%);
 }
 
 .hero-intro {
-  border: 1px solid blueviolet;
-  max-width: 460px;
+  border: 1px solid red;
+  padding: 0 1.5rem;
+  grid-column: 2 / 6;
+  width: 500px;
+}
+
+.hero-intro h1 {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-bottom: 2rem;
+  color: hsl(233, 26%, 24%);
+}
+
+.hero-intro p {
+  color: hsl(233, 8%, 62%);
+  line-height: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.hero-img {
+  grid-column: 6 / -1;
+}
+
+.hero-img img {
+  transform: translate3d(140px, 30px, 0);
 }
